[gd_scene load_steps=5 format=3 uid="uid://chp7oj6xvnqmy"]

[ext_resource type="Texture2D" uid="uid://ceo0lww3tylwn" path="res://assets/frames/hidden_frame_blank.png" id="1_awbm6"]
[ext_resource type="Texture2D" uid="uid://b05131jm8yq8k" path="res://assets/frames/blue_frame.png" id="2_6arhp"]
[ext_resource type="Script" path="res://scenes/memory_tile/memory_tile.gd" id="2_cvh3f"]
[ext_resource type="Texture2D" uid="uid://d3bdwii4u30ql" path="res://assets/glitch/cabbage.png" id="3_s0dl7"]

[node name="MemoryTile" type="TextureButton" groups=["tile"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -42.0
offset_right = 42.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 42)
texture_normal = ExtResource("1_awbm6")
script = ExtResource("2_cvh3f")

[node name="FrameImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -42.0
offset_right = 42.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 42)
texture = ExtResource("2_6arhp")

[node name="ItemImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("3_s0dl7")
